# CarlaSad

./: .dockerignore  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: api-agent.md  dataset-gen.md  ros-agent.md  world-builder.md
.claude/commands/: bridge-start.md  carla-start.md  dataset-gen.md  dev-up.md  replay.md  world-mode.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api-backend/: carla_client.py  main.py  requirements.txt  sim_controller.py
api-backend/carla/: __init__.py
api-backend/grpc/: carlasad.proto  server.py
api-backend/models/: mission.py  world.py
api-backend/routers/: mission.py  recording.py  scenario.py  sessions.py  sim.py  world.py
api-backend/ws/: __init__.py  events_ws.py  state_ws.py
carla-fork/: setup_fork.sh
carla-fork/PythonAPI/carlasad/: __init__.py  ground_truth.py  pyproject.toml  sensor_rig.py  setup.py
carla-fork/PythonAPI/carlasad/actors/: __init__.py  pose_bank.py
carla-fork/PythonAPI/carlasad/layers/: __init__.py  field_boundary_layer.py  process_layer.py  terrain_layer.py
carla-fork/PythonAPI/carlasad/logging/: __init__.py  manifest.py  recorder.py  replay.py
carla-fork/PythonAPI/carlasad/physics/: __init__.py  terrain_physics.py
carla-fork/PythonAPI/carlasad/tests/: test_layers.py  test_recorder.py
carla-fork/PythonAPI/carlasad/world_modes/: __init__.py  world_interface.py
carla-fork/patches/: SensorFactory_ThermalCamera.patch
docker/api-backend-dev/: Dockerfile
docker/carla-dev/: Dockerfile
docker/carla-runtime/: Dockerfile  entrypoint.sh
docker/dataset-gen-dev/: Dockerfile
docker/reconstruction-dev/: Dockerfile
docker/ros2-bridge-dev/: Dockerfile
docker/tools-dev/: Dockerfile
docs/: dart_api_client_example.dart
gs-dataset-gen/: pipeline.py  requirements.txt
gs-dataset-gen/compositor/: __init__.py  dataset_writer.py  lighting_adapter.py  scene_compositor.py  shadow_compositor.py
gs-dataset-gen/label_generator/: __init__.py  generator.py
gs-dataset-gen/tests/: test_compositor.py
ros-bridge/carlasad_bridge/: __init__.py  bridge_config.yaml  bridge_node.py  gt_bridge.py  package.xml  process_publisher.py  risk_map_publisher.py  sensor_bridge.py  setup.py  topic_contract.py
ros-bridge/carlasad_bridge/launch/: bridge.launch.py
ros-bridge/carlasad_msgs/: CMakeLists.txt  package.xml
scenarios/configs/: dataset_recording.yaml  dynamic_actors_field.yaml  field_patrol.yaml
scenarios/scripts/: base_scenario.py  (+3 more)
tools/mcp-carla/: carla_proxy_server.py  pyproject.toml  server.py  test_carla_direct.py  test_mcp_server.py
tools/mcp-carla/carla/: __init__.py
(+34 files in other folders)
