<?xml version="1.0"?>
<package format="3">
  <name>carlasad_bridge</name>
  <version>0.1.0</version>
  <description>CarlaSad ROS2 bridge — CARLA to ROS2 interface for tractor simulation</description>
  <maintainer email="mayak1fm@gmail.com">CarlaSad Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>carlasad_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
