[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "carlasad"
version = "0.1.0"
description = "CarlaSad Python extensions for CARLA tractor simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CarlaSad Team", email = "mayak1fm@gmail.com"},
]
keywords = ["carla", "autonomous", "tractor", "simulation", "agricultural"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
carla = ["carla>=0.9.15"]
ros   = ["rclpy"]
dev   = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
carlasad-replay = "carlasad.logging.replay:main"

[project.urls]
Repository = "https://github.com/mayak1fm/CarlaSad"

[tool.setuptools.packages.find]
where   = ["."]
include = ["carlasad*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
asyncio_mode = "auto"
